basic exercise editing feature

--- a/app/views/admin/_admin_nav.html.erb
+++ b/app/views/admin/_admin_nav.html.erb
@@ -17,4 +17,7 @@
   <li class="<%= controller_name == 'teachers' ? 'active' : '' %>"><a href="<%= admin_teachers_path %>">教师管理</a></li>
   <li class="<%= controller_name == 'about' ? 'active' : '' %>"><a href="<%= edit_admin_about_path(1) %>">关于我们</a></li>
   <li class="<%= controller_name == 'vip' ? 'active' : '' %>"><a href="<%= edit_admin_vip_path(1) %>">一对一页面</a></li>
+  <li><div>题库管理</div></li>
+  <li class="<%= controller_name == 'exercises' ? 'active' : '' %>"><a href="<%= admin_exercises_path %>">题库和解析</a></li>
+
 </ul>
