--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -8,7 +8,7 @@
 @import "summernote";
 
 body {
-  font-family: 'hiragino sans gb', helvetica, arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", helvetica, arial, sans-serif;
   background-color: #f9f9f9;
   color: #333;
   -webkit-font-smoothing: antialiased;
