--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -64,6 +64,15 @@
   </div>
 
   <div class="form-group">
+    <label for="exclusive" class="col-sm-2 control-label">770原创</label>
+    <div class="col-sm-10">
+      <label class="checkbox-inline">
+        <%= f.check_box :exclusive %> 770原创解析
+      </label>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label for="book" class="col-sm-2 control-label">来源</label>
     <div class="col-sm-10">
       <% @books.each do |book| %>
