--- a/app/views/courses/free.html.erb
+++ b/app/views/courses/free.html.erb
@@ -29,7 +29,7 @@
         <div class="left pl3" style="width:59%">
           <a href="<%= course_show_path(course, from: 'free') %>" class="h3 black"><%= course.title %></a>
           <div class="gray h5 mt1">
-            <div>讲师: <%= course.teacher.name %></div>
+            <div>讲师: <%= course.teacher.nil? ? '' : course.teacher.name %></div>
             <div>开课时间：<%= course.start_time.to_formatted_s(:date_and_time)%></div>
           </div>
           <div class="mt2">
