--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -2,8 +2,9 @@
 
   <div class="pt2 header-margin search-bar">
     <div class="container">
-      <input type="text" placeholder="输入题目关键词">
-      <button>搜索</button>
+      <%= form_tag search_exercises_path, :method => :get do %>
+        <%= text_field_tag :query, params[:query], placeholder: '输入题目关键词' %> <%= submit_tag "搜索" %>
+      <% end %>
     </div>
   </div>
 
