--- a/app/assets/stylesheets/exercises.scss
+++ b/app/assets/stylesheets/exercises.scss
@@ -1,5 +1,17 @@
 $green: #749d1f;
 
+.btn {
+  background-color: $green;
+  color: white;
+  padding: 10px 30px;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken($green, 10%);
+  }
+}
+
 .search-bar {
   padding: 30px;
   background-color: white;
@@ -7,13 +19,13 @@ $green: #749d1f;
   box-shadow: 0 2px 12px rgba(0,0,0,.15);
   text-align: center;
 
-  input {
+  #query {
     border: 2px solid $green;
     width: 630px;
     padding: 11px;
   }
 
-  button {
+  input[type=submit] {
     color: white;
     background-color: $green;
     border: none;
@@ -157,4 +169,85 @@ $green: #749d1f;
   h4 {
     margin: 0 0 24px 0;
   }
+
+  .question {
+    background-color: #f5f5f5;
+    padding: 20px;
+  }
+
+  ul {
+    margin: 0;
+    padding-left: 20px;
+  }
+
+  li {
+    list-style: none;
+    padding: 12px 0;
+    border-bottom: 1px solid #efefef;
+
+    &.correct {
+      background: #FCFFF4;
+      color: $green;
+    }
+  }
+
+  [type=radio] {
+    margin-right: 6px;
+  }
+
+  .show-guides {
+    margin-top: 32px;
+  }
+
+  .guides {
+
+    p {
+      font-weight: bold;
+      color: $green;
+    }
+
+    ul {
+      margin-bottom: 40px;
+    }
+
+  }
+
+  h3 {
+    font-size: 16px;
+
+    img {
+      height: 16px;
+      margin-right: 8px;
+      vertical-align: text-bottom;
+    }
+  }
+
+  h3:after {
+    content: ' ';
+    height: 6px;
+    border: none;
+    background: #f1f1f1;
+    float: right;
+    width: 1024px;
+    margin-top: 10px;
+  }
+
+  label {
+    cursor: pointer;
+  }
+
+  .permission-reminder {
+    padding: 8px 16px;
+    color: #ff7300;
+    background: #FFF9E6;
+    border: 1px solid #FFEFBE;
+    display: inline-block;
+    margin-bottom: 32px;
+
+    a {
+      padding: 0 4px;
+    }
+  }
+
+
 }
