--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -11,20 +11,39 @@
 
   <div class="exercise-detail">
     <div class="container">
-      <h4>题目内容</h4>
-      <p><%= raw @exercise.title %></p>
+      <!-- <h4>题目内容</h4> -->
+      <p class="question"><%= raw @exercise.title %></p>
       <ul>
-        <% @exercise.choices.each do |c| %>
-          <li><%= c %></li>
+        <% options = ['A', 'B', 'C', 'D', 'E'] %>
+        <% @exercise.choices.each_with_index do |c, index| %>
+          <li><label><input type="radio" name="choice"><b><%= options[index] %></b>&nbsp;<%= c %></label></li>
         <% end -%>
       </ul>
-      <button>显示正确答案和解析</button>
-      <p>正确答案: <span><%= @exercise.anwser %></span></p>
-      <ul>
-        <% @exercise.guides.each do |guide| %>
-          <li><%= guide %></li>
+      <button class="btn show-guides">显示正确答案和解析</button>
+
+      <div class="guides">
+        <p>正确答案: <span><%= options[@exercise.anwser] %></span></p>
+        <h3><%= image_tag 'icon-guides.png' %>题目解析</h3>
+        <ul>
+          <% @exercise.guides.each_with_index do |guide, index| %>
+            <li class="<%= (index == @exercise.anwser) ? 'correct' : '' %>"><b><%= options[index] %></b>&nbsp;<%= guide %></li>
+          <% end -%>
+        </ul>
+
+        <% if @exercise.video_url.present? %>
+          <h3><%= image_tag 'icon-guides-video.png' %>视频解析</h3>
+          <% if true # 权限检查 %>
+              <div class="permission-reminder">您尚未获得视频解析权限，仅限<a href="#">逻辑小班</a>或<a href="#">VIP一对一</a>学员有权观看</div>
+              <div>
+                <%= image_tag 'http://7xtg0z.com2.z0.glb.clouddn.com/course-%E6%95%B0%E5%AD%A6%E8%AE%AD%E7%BB%83%E8%90%A5-2..png', width: 423, height: 244 %>
+              </div>
+          <% end -%>
         <% end -%>
-      </ul>
+      </div>
     </div>
   </div>
 </div>
+
+<% content_for :scripts do %>
+  <%= javascript_include_tag 'exercises' %>
+<% end -%>
