--- a/app/views/welcome/vip.html.erb
+++ b/app/views/welcome/vip.html.erb
@@ -81,9 +81,9 @@
   <h2 class="center">如何报名</h2>
   <div class="container">
     <div class="card center">
-      <p>请关注 <b>GMAT770长工</b> 的微信号咨询报名</p>
+      <p>你可以通过下面任何一种方式报名</p>
       <p>
-        <%= image_tag "http://7xtg0z.com2.z0.glb.clouddn.com/qrcode.png", width: 200 %>
+        <%= image_tag "qrcode.png", width: 600 %>
       </p>
     </div>
   </div>
