--- a/app/views/welcome/vip.html.erb
+++ b/app/views/welcome/vip.html.erb
@@ -81,7 +81,7 @@
   <h2 class="center">如何报名</h2>
   <div class="container">
     <div class="card center">
-      <p>你可以通过下面任何一种方式报名</p>
+      <p>请添加长工微信报名，详情可电话咨询。</p>
       <p>
         <%= image_tag "qrcode.png", width: 600 %>
       </p>
