hide guides by default

--- a/app/assets/stylesheets/exercises.scss
+++ b/app/assets/stylesheets/exercises.scss
@@ -197,9 +197,12 @@ $green: #749d1f;
 
   .show-guides {
     margin-top: 32px;
+    font-size: 14px;
   }
 
   .guides {
+
+    display: none;
 
     p {
       font-weight: bold;
