add MathJax to display formulas nicely

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -46,4 +46,5 @@
 
 <% content_for :scripts do %>
   <%= javascript_include_tag 'exercises' %>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <% end -%>
