--- a/app/views/admin/exercises/index.html.erb
+++ b/app/views/admin/exercises/index.html.erb
@@ -26,4 +26,5 @@
 
 <% content_for :scripts do %>
   <%= javascript_include_tag 'admin/exercises' %>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <% end -%>
