--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -96,6 +96,6 @@
   var filters = <%= raw @filters.to_json %>;
   </script>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   <%= javascript_include_tag 'exercises' %>
 <% end -%>
