--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,8 +7,8 @@
     <title>GMAT770内容管理系统</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'admin'%>
+    <%= javascript_include_tag 'admin' %>
   </head>
   <body>
     <nav class="navbar navbar-default">
