--- a/app/views/admin/exercises/index.html.erb
+++ b/app/views/admin/exercises/index.html.erb
@@ -9,7 +9,7 @@
   <tbody>
     <% @exercises.each do |exercise| %>
       <tr>
-        <td><%= raw(exercise.title).truncate(180) %></td>
+        <td><%= raw exercise.title.truncate(180) %></td>
         <td>
           <% exercise.labels.each do |label| %>
             <span><%= label.name %></span>,&nbsp;
