--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -4,7 +4,8 @@
     <div class="col-sm-10">
       <%= f.text_area :title, class: 'form-control', rows: 5 %>
       <p class="text-muted" style="margin-top: 4px">
-        1.使用 <a href="http://asciimath.org/#syntax" target="_blank">AsciiMath</a> 语法来输入数学公式；2.使用&lt;u&gt;&lt;/u&gt;包围想要使用下划线的文字；3.使用&lt;br/&gt;</code></pre>插入换行符
+        1.使用 <a href="http://asciimath.org/#syntax" target="_blank">AsciiMath</a> 语法来输入数学公式<br/>
+        2.下划线 &lt;u&gt;&lt;/u&gt;，粗体 &lt;b&gt;&lt;/b&gt;，斜体 &lt;i&gt;&lt;/i&gt;，换行符 &lt;br/&gt;
       </p>
     </div>
   </div>
