add instructions for image

--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -5,7 +5,8 @@
       <%= f.text_area :title, class: 'form-control', rows: 5 %>
       <p class="text-muted" style="margin-top: 4px">
         1.使用 <a href="http://asciimath.org/#syntax" target="_blank">AsciiMath</a> 语法来输入数学公式<br/>
-        2.下划线 &lt;u&gt;&lt;/u&gt;，粗体 &lt;b&gt;&lt;/b&gt;，斜体 &lt;i&gt;&lt;/i&gt;，换行符 &lt;br/&gt;
+        2.下划线 &lt;u&gt;&lt;/u&gt;，粗体 &lt;b&gt;&lt;/b&gt;，斜体 &lt;i&gt;&lt;/i&gt;，换行符 &lt;br/&gt;<br/>
+        3.可先把图片上传到七牛，然后使用 &lt;img src="url" /&gt; 插入图片
       </p>
     </div>
   </div>
