associate users with labels

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -6,6 +6,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "summernote";
+@import 'bootstrap-datetimepicker';
 
 body {
   font-family: "Segoe UI", helvetica, arial, sans-serif;
