--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,20 +3,28 @@
   <thead>
     <th>用户昵称</th>
     <th>注册时间</th>
-    <th>城市</th>
     <th>权限</th>
     <th>权限有效期</th>
     <th>手机号</th>
+    <th>操作</th>
   </thead>
   <tbody>
     <% @users.each do |user| %>
-      <tr>
+      <tr data-id="<%= user.id %>">
         <td><%= user.nickname %></td>
         <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
-        <td><%= user.city %></td>
-        <td>-</td>
-        <td>长期</td>
+        <td><%= user.label_names %></td>
+        <td>
+          <% if user.valid_to.present? %>
+            <%= user.valid_to.to_formatted_s(:date_and_time) %>
+          <% else %>
+            <span class="text-muted">长期</span>
+          <% end -%>
+        </td>
         <td><%= user.mobile_part %></td>
+        <td>
+          <%= link_to '设置权限', edit_admin_user_path(user) %>
+        </td>
       </tr>
     <% end -%>
   </tbody>
