--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -72,7 +72,7 @@
         <td style="background-color: <%= @meeting.colors[6] %>"><label><input type="radio" name="calendar-category" value="6"> 免费私塾公开课</label></td>
       </tr>
       <tr>
-        <td style="background-color: <%= @meeting.colors[9] %>"><label><input type="radio" name="calendar-category" value="9"> 阅读</label></td>
+        <td style="background-color: <%= @meeting.colors[9] %>"><label><input type="radio" name="calendar-category" value="9"> 阅读0→1</label></td>
         <td></td>
         <td></td>
         <td></td>
