--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,7 @@
             <a class="mx1" href="http://www.cctalk.com/org/122/">沪江CCtalk</a>
           </p>
           <p>&copy; 2016 北京思晨教育科技有限公司 京ICP备16060483号-1</p>
+          <p>客服电话：010-58734600 &nbsp;&nbsp;&nbsp; 服务时间：周一至周五 09:00 - 18:00</p>
       </div>
     </footer>
 
