--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,8 @@
             <a class="mx1" href="http://edu.yy.com/agency/33137#tab0">YY教育</a>
             <a class="mx1" href="http://www.cctalk.com/org/122/">沪江CCtalk</a>
           </p>
-          <p>&copy; 2016 北京思晨教育科技有限公司 京ICP备16060483号-1</p>
-          <p>客服电话：010-58734600 &nbsp;&nbsp;&nbsp; 服务时间：周一至周五 09:00 - 18:00</p>
+          <p>&copy; 2016 &ndash; 2017 北京思晨教育科技有限公司 京ICP备16060483号-1</p>
+          <p>客服电话：010 &ndash; 58734600 &nbsp;&nbsp;&nbsp; 服务时间：周一至周五 09:00 &ndash; 18:00</p>
       </div>
     </footer>
 
