let guides support basic format

--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -58,6 +58,7 @@
           <% end -%>
         </tbody>
       </table>
+      <div class="text-muted">解析内容支持格式：下划线 &lt;u&gt;&lt;/u&gt;，粗体 &lt;b&gt;&lt;/b&gt;，斜体 &lt;i&gt;&lt;/i&gt;，换行符 &lt;br/&gt;</div>
     </div>
   </div>
 
