move label ids to config and update related form and show page

--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -38,7 +38,7 @@
   </div>
 
 
-  <% if @exercise.is_math? %>
+  <% if @exercise.is_sc_cr_ps_ds? %>
 
     <div class="form-group">
       <label class="col-sm-2 control-label">文字解析</label>
