--- a/app/views/exercises/_guides.html.erb
+++ b/app/views/exercises/_guides.html.erb
@@ -3,7 +3,7 @@
 
 <h3><%= image_tag 'icon-guides.png' %>题目解析</h3>
 
-<% if @exercise.is_math? %>
+<% if @exercise.is_sc_cr_ps_ds? %>
 
   <div style="padding-left: 22px;">
     <%= raw @exercise.math_guide %>
