--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -11,7 +11,7 @@
         </div>
       </div>
 
-      <h2 class="center" style="font-size:40px;">团队成员</h2>
+      <h2 class="center" style="font-size:40px;">关于我们</h2>
 
       <% @teachers.each do |teacher| %>
         <div class="member-desc card clearfix">
