--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 
     <footer class="py2 h6 center gray clearfix">
       <div class="max-width-4 mx-auto">
-          <p>合作伙伴：
+          <p>友情链接：
             <a class="mx1" href="http://www.mba.com/global">GMAC</a>
             <a class="mx1" href="https://gmat770.ke.qq.com/">腾讯课堂</a>
             <a class="mx1" href="http://e.youku.com/o/EOMTY2OA==">Youku学堂</a>
