--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,13 @@
 <h4>用户</h4>
+
+<div class="btn-group btn-group-sm" role="group" style="margin-bottom: 16px;">
+  <button class="btn btn-default">加入用户组</button>
+</div>
+
+
 <table class="table table-bordered">
   <thead>
+    <th></th>
     <th>用户昵称</th>
     <th>注册时间</th>
     <th>手机号</th>
@@ -9,6 +16,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr data-id="<%= user.id %>">
+        <td><input type="checkbox"></td>
         <td><%= user.nickname %></td>
         <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
         <td><%= user.mobile_part %></td>
